// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnChartSpecModel > snapshot > array 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      "a",
      "b",
      "c",
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "tooltip": [
          {
            "bin": true,
            "field": "a",
            "format": ".2f",
            "title": "a",
            "type": "quantitative",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": null,
          "bin": {
            "maxbins": 10,
          },
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
      "transform": [
        {
          "filter": "datum['a'] !== null",
        },
      ],
    },
    {
      "encoding": {
        "tooltip": [
          {
            "title": "a",
            "value": "Missing",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Null",
            "type": "quantitative",
          },
        ],
        "x": {
          "value": 0,
        },
        "y": {
          "aggregate": "count",
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#cc4e00",
        "type": "bar",
        "x": {
          "offset": -15,
        },
      },
      "transform": [
        {
          "filter": "datum['a'] === null",
        },
      ],
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot > csv data 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      {
        "a": 4,
        "b": 5,
        "c": 6,
      },
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "tooltip": [
          {
            "bin": true,
            "field": "a",
            "format": ".2f",
            "title": "a",
            "type": "quantitative",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": null,
          "bin": {
            "maxbins": 10,
          },
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
      "transform": [
        {
          "filter": "datum['a'] !== null",
        },
      ],
    },
    {
      "encoding": {
        "tooltip": [
          {
            "title": "a",
            "value": "Missing",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Null",
            "type": "quantitative",
          },
        ],
        "x": {
          "value": 0,
        },
        "y": {
          "aggregate": "count",
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#cc4e00",
        "type": "bar",
        "x": {
          "offset": -15,
        },
      },
      "transform": [
        {
          "filter": "datum['a'] === null",
        },
      ],
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot > csv string 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      {
        "a": 1,
        "b": 2,
        "c": 3,
      },
      {
        "a": 4,
        "b": 5,
        "c": 6,
      },
    ],
  },
  "height": 100,
  "layer": [
    {
      "encoding": {
        "tooltip": [
          {
            "bin": true,
            "field": "a",
            "format": ".2f",
            "title": "a",
            "type": "quantitative",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Count",
            "type": "quantitative",
          },
        ],
        "x": {
          "axis": null,
          "bin": {
            "maxbins": 10,
          },
          "field": "a",
          "type": "quantitative",
        },
        "y": {
          "aggregate": "count",
          "axis": null,
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#027864",
        "type": "bar",
      },
      "transform": [
        {
          "filter": "datum['a'] !== null",
        },
      ],
    },
    {
      "encoding": {
        "tooltip": [
          {
            "title": "a",
            "value": "Missing",
          },
          {
            "aggregate": "count",
            "format": ",d",
            "title": "Null",
            "type": "quantitative",
          },
        ],
        "x": {
          "value": 0,
        },
        "y": {
          "aggregate": "count",
          "type": "quantitative",
        },
      },
      "mark": {
        "color": "#cc4e00",
        "type": "bar",
        "x": {
          "offset": -15,
        },
      },
      "transform": [
        {
          "filter": "datum['a'] === null",
        },
      ],
    },
  ],
}
`;

exports[`ColumnChartSpecModel > snapshot > url data 1`] = `
{
  "background": "transparent",
  "config": {
    "axis": {
      "domain": false,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [],
  },
  "encoding": {
    "color": {
      "condition": {
        "test": "datum["bin_maxbins_10_date_range"] === "null"",
        "value": "#cc4e00",
      },
      "value": "#027864",
    },
    "tooltip": [
      {
        "bin": true,
        "field": "date",
        "format": "%Y-%m-%d",
        "title": "date",
        "type": "temporal",
      },
      {
        "aggregate": "count",
        "format": ",d",
        "title": "Count",
        "type": "quantitative",
      },
    ],
    "x": {
      "axis": null,
      "bin": true,
      "field": "date",
      "scale": {
        "align": 0,
        "paddingInner": 0,
        "paddingOuter": {
          "expr": "length(data('data_0')) == 2 ? 1 : length(data('data_0')) == 3 ? 0.5 : length(data('data_0')) == 4 ? 0 : 0",
        },
      },
      "type": "temporal",
    },
    "y": {
      "aggregate": "count",
      "axis": null,
      "type": "quantitative",
    },
  },
  "height": 100,
  "mark": {
    "color": "#027864",
    "type": "bar",
  },
}
`;
